Fix layout of subscribe box on mobile

--- a/app/assets/stylesheets/subscribe.scss
+++ b/app/assets/stylesheets/subscribe.scss
@@ -12,7 +12,6 @@
     width: 85%;
   }
   .subscribe-form {
-    height: 45px;
     margin-top: 20px;
     input {
       width: 273px;
